# nix-formatter

./: .gitignore  README.md  default.nix  intro  nix-formatter.cabal  shell.nix
src/: Main.hs
