cabal-version:       2.4
name:                nix-formatter
version:             0.1.0.0

executable nix-formatter
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
  -- Add deps here:
   , bytestring-tree-builder
   , data-fix
   , hnix ^>= 0.11.0.0
   , mtl
   , semigroupoids
   , text
  hs-source-dirs:      src
  default-language:    Haskell2010
